--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,11 @@
 <footer>
-    <hr>
-    &copy;2020 Garrett
+    <div class="row justify-content-md-center">
+
+        <div class="col-md-6">
+            <hr>
+            &copy;2020 Garrett
+        </div>
+    </div>
 </footer>
 </body>
 
