--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs') %>
 <br>
-<div class="box-shadow container border rounded">
+<div class="shadow container border rounded ">
     <br>
     <div class="row justify-content-md-center">
         <h2>Admin Login:</h2>
