adding more changes for bookmanager

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -16,7 +16,7 @@
             Admin-Menu
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Manage Books</a>
+            <a class="dropdown-item" href="/bookManager">Manage Books</a>
             <a class="dropdown-item" href="#">Manage Admins</a>
           </div>
         </li>
