--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -11,6 +11,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/login">Login</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/cart">Cart</a>
+        </li>
         <%
         if(isAdmin){ %> 
         <li class="nav-item dropdown">
@@ -35,7 +38,6 @@
           <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
         </form>
       <% } %>
-      
     </div>
   </nav>
 
