--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,7 +12,7 @@
           <a class="nav-link" href="/login">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/cart">Cart</a>
+          <a class="nav-link" href="/shoppingCart">Shopping Cart</a>
         </li>
         <%
         if(isAdmin){ %> 
@@ -22,7 +22,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/bookManager">Manage Books</a>
-            <a class="dropdown-item" href="#">Manage Admins</a>
+            <a class="dropdown-item" href="/reports">Reports</a>
           </div>
         </li>
         <% } %>
