Added reports, edited footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,10 @@
 
         <div class="col-md-6">
             <hr>
-            &copy;2020 Garrett
+            &copy;2020 Barez, Garrett, Krepelka, Salas
+        </div>
+        <div class="row-md-6">
+            <strong>Disclaimer:</strong> The information in this webpage is used for academic purposes only.
         </div>
     </div>
 </footer>
