--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,9 @@
 <br>
 <footer>
     <div class="row justify-content-md-center">
-
         <div class="col-md-6">
             <hr>
-            &copy;2020 Barez, Garrett, Krepelka, Salas
-        </div>
-        <div class="row-md-6">
+            &copy;2020 Barez, Garrett, Krepelka, Salas <br>
             <strong>Disclaimer:</strong> The information in this webpage is used for academic purposes only.
         </div>
     </div>
