--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,10 @@
       </div>
     </div>
     <p class="lead mt-5 text-center">
-      <a class="btn btn-primary btn-lg btn-grad" href="#" role="button" data-toggle="modal" data-target="#booksModal">Search All Books</a>
+      <a class="btn btn-primary btn-lg btn-grad" href="#" role="button" data-toggle="modal" data-target="#booksModal">Show All Books</a>
+    </p>
+    <p class="lead mt-5 text-center">
+      <a class="btn btn-primary btn-lg btn-grad" href="/search" role="button">Search for Books</a>
     </p>
   </div>
 </div>
