fix author and isbn search not registering

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -9,7 +9,7 @@
     <input type="text" id="defaultContactFormName" class="form-control mb-4" placeholder="Title" name="title">
 
     <!-- Author -->
-    <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="Author" name="author">
+    <input type="text" id="defaultContactFormEmail" class="form-control mb-4" placeholder="Author" name="author">
 
     <!-- Genre -->
     <label>Genre</label>
@@ -26,7 +26,7 @@
     </select>
 
     <!-- ISBN -->
-    <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="ISBN" name="ISBN">
+    <input type="text" id="defaultContactFormEmail" class="form-control mb-4" placeholder="ISBN" name="isbn">
 
     <button class="btn btn-info btn-block" type="submit">Send</button>
 
